--- a/orders-service-local.properties
+++ b/orders-service-local.properties
@@ -11,7 +11,7 @@ logging.pattern.console=%clr(%d{yy-MM-dd E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(
 eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
 eureka.client.instance.preferIpAddress = true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/orderdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 spring.datasource.username=root
 spring.datasource.password=Welcome123$
