--- a/orders-service-local.properties
+++ b/orders-service-local.properties
@@ -18,3 +18,6 @@ spring.datasource.password=Welcome123$
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+server.port=8081
+restaurant.search.item.url= http://localhost:8080/item/id/
