--- a/customers-service-local.properties
+++ b/customers-service-local.properties
@@ -1,7 +1,7 @@
 user=user
 password=password
 spring.application.name=customers-service
-
+server.port=8082
 pring.output.ansi.enabled=ALWAYS
 logging.level.org.springframework=ERROR
 logging.level.com.eatza=DEBUG
