--- a/reviews-service-local.properties
+++ b/reviews-service-local.properties
@@ -1,7 +1,7 @@
 user=user
 password=password
 spring.application.name=reviews-service
-
+server.port=8083
 pring.output.ansi.enabled=ALWAYS
 logging.level.org.springframework=ERROR
 logging.level.com.eatza=DEBUG
